Added logout functionality and partial layout

--- a/StudentManagementSystem/Views/Account/Register.cshtml
+++ b/StudentManagementSystem/Views/Account/Register.cshtml
@@ -38,7 +38,7 @@
             <input type="submit" value="Inregistrare" class="btn btn-success w-100 p-2" />
             
             <p class="text-center mt-2">
-                <a asp-controller="Account" asp-action="Login" class="text-decoration-none">Login</a>
+                <a asp-controller="Account" asp-action="Login" class="text-decoration-none">Autentificare</a>
             </p>
             <div class="text-center">
                 <a asp-controller="Home" asp-action="Index" class="text-decoration-none mt-3">Inapoi</a>
