Added logic for when the user opens the website back and they are logged in to be redirected to their specific user role views, not the Home view. Also started added a partial for the student view and a separate navbar for the student.

--- a/StudentManagementSystem/Views/Student/Index.cshtml
+++ b/StudentManagementSystem/Views/Student/Index.cshtml
@@ -1,17 +1,7 @@
-﻿@model List<StudentManagementSystem.Models.Homework>
-
-<h2>My Homeworks</h2>
-
-@if (!Model.Any())
-{
-    <p>No homeworks found.</p>
+﻿@model StudentManagementSystem.Models.Student
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Acasa";
 }
-else
-{
-    <ul>
-        @foreach (var homework in Model)
-        {
-            <li>@homework.Title - @homework.Description</li>
-        }
-    </ul>
-}
+
+<h5>Bine ai venit, @Model.Name!</h5>
