Started working on the professor functionalities. Added a professor controller and views.

--- a/StudentManagementSystem/Views/Shared/_Layout.cshtml
+++ b/StudentManagementSystem/Views/Shared/_Layout.cshtml
@@ -15,6 +15,10 @@
         {
             <partial name="_StudentPartial" />
         }
+        else if(User.IsInRole("Professor"))
+        {
+            <partial name="_ProfessorPartial"/>
+        }
         else
         {
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
