--- a/StudentManagementSystem/Views/Shared/_ProfessorPartial.cshtml
+++ b/StudentManagementSystem/Views/Shared/_ProfessorPartial.cshtml
@@ -10,6 +10,9 @@
                 <a class="nav-link" asp-controller="Professor" asp-action="ViewStudents">Studenti</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" asp-controller="Professor" asp-action="Homeworks">Teme</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Iesire</a>
             </li>
         </ul>
