Modified homework by adding an IsTemplate field. Now when a professor creates homeworks, when he clicks to see all math homeworks he doesnt see all the copies of homeworks for the students.

--- a/StudentManagementSystem/Views/Professor/Homeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/Homeworks.cshtml
@@ -9,6 +9,9 @@
 @if (!Model.Any())
 {
     <p>Nu exista teme pentru aceasta disciplina.</p>
+    <a class="btn btn-primary" asp-controller="Professor" asp-action="CreateHomework">
+        Creeaza o tema
+    </a>
 }
 else
 {
