The professor can now edit homeworks.

--- a/StudentManagementSystem/Views/Student/EditHomework.cshtml
+++ b/StudentManagementSystem/Views/Student/EditHomework.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StudentManagementSystem.Models.Homework
 
 @{
-    ViewData["Title"] = "Edit Homework";
+    ViewData["Title"] = "Schimba Tema";
 }
 
 <h2>Edit Homework</h2>
