Updated the student controller edit homework to use the HomeworkViewModel.

--- a/StudentManagementSystem/Views/Professor/EditHomework.cshtml
+++ b/StudentManagementSystem/Views/Professor/EditHomework.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StudentManagementSystem.ViewModels.HomeworkViewModel
 
 @{
-    ViewData["Title"] = "Edit Homework";
+    ViewData["Title"] = "Schimba Tema";
 }
 
 <h2>Actualizeaza Tema @Model.Title</h2>
