--- a/StudentManagementSystem/Views/Student/EditHomework.cshtml
+++ b/StudentManagementSystem/Views/Student/EditHomework.cshtml
@@ -1,16 +1,28 @@
-﻿@model StudentManagementSystem.Models.Homework
+﻿@model StudentManagementSystem.ViewModels.HomeworkViewModel
 
 @{
     ViewData["Title"] = "Schimba Tema";
 }
 
-<h2>Edit Homework</h2>
+<h2>Actualizeaza Tema</h2>
 
 <form asp-action="EditHomework" method="post">
+    <input type="hidden" asp-for="Id" />
+    <div class="form-group">
+        <label asp-for="Title"></label>
+        <span>@Model.Title</span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Description"></label>
+        <span>@Model.Description</span>
+    </div>
 
     <div class="form-group">
         <label asp-for="Content"></label>
-        <textarea asp-for="Content">@Model.Content</textarea>
+        <textarea asp-for="Content"
+                  rows="15"
+                  cols="40">@Model.Content</textarea>
     </div>
 
     <button type="submit" class="btn btn-primary">Salveaza</button>
