--- a/StudentManagementSystem/Views/Professor/Homeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/Homeworks.cshtml
@@ -23,6 +23,7 @@ else
             <tr>
                 <th>Titlu</th>
                 <th>Descriere</th>
+                <th>Data creeari</th>
                 <th>Termen limita</th>
                 <th>Nota</th>
                 <th>Stare</th>
@@ -34,9 +35,27 @@ else
                 <tr>
                     <td>@homework.Title</td>
                     <td>@homework.Description</td>
-                    <td>@homework.EndDate?.ToString("yyyy-MM-dd")</td>
-                    <td>@homework.Grade</td>
-                    <td>@homework.Status</td>
+                    <td>@homework.CreationDate</td>
+                    <td>@homework.EndDate</td>
+
+                    @if (homework.Grade == 0.00)
+                    {
+                        <td>Fara nota</td>
+                    }
+                    else
+                    {
+                        <td>@homework.Grade</td>
+                    }
+
+                    @if (homework.Status == false)
+                    {
+                        <td>Necompletata</td>
+                    }
+                    else
+                    {
+                        <td>Completata</td>
+                    }
+
                     <td>
                         <a class="btn btn-danger" asp-route-homeworkId="@homework.Id" asp-controller="Professor" asp-action="DeleteHomework">
                             Sterge
