--- a/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
@@ -17,6 +17,7 @@ else
             <tr>
                 <th>Titlu</th>
                 <th>Descriere</th>
+                <th>Data crearii</th>
                 <th>Termen limita</th>
                 <th>Nota</th>
                 <th>Stare</th>
@@ -28,9 +29,27 @@ else
                 <tr>
                     <td>@homework.Title</td>
                     <td>@homework.Description</td>
-                    <td>@homework.EndDate?.ToString("yyyy-MM-dd")</td>
-                    <td>@homework.Grade</td>
-                    <td>@homework.Status</td>
+                    <td>@homework.CreationDate</td>
+                    <td>@homework.EndDate</td>
+
+                    @if (homework.Grade == 0.00)
+                    {
+                        <td>Fara nota</td>
+                    }
+                    else
+                    {
+                        <td>@homework.Grade</td>
+                    }
+
+                    @if (homework.Status == false)
+                    {
+                        <td>Necompletata</td>
+                    }
+                    else
+                    {
+                        <td>Completata</td>
+                    }
+
                     @if (homework is StudentManagementSystem.Models.Project)
                     {
                         <td>
