--- a/StudentManagementSystem/Views/Student/Homework.cshtml
+++ b/StudentManagementSystem/Views/Student/Homework.cshtml
@@ -14,20 +14,66 @@
 }
 else
 {
-    <th>
-        <ul>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Titlu</th>
+                <th>Descriere</th>
+                <th>Data creari</th>
+                <th>Termen limita</th>
+                <th>Nota</th>
+                <th>Stare</th>
+            </tr>
+        </thead>
+        <tbody>
             @foreach (var homework in Model)
             {
-                
-                <li><a asp-controller="Student" asp-action="EditHomework" asp-route-id="@homework.Id">@homework.Title</a> - @homework.Description
-                @if(homework is StudentManagementSystem.Models.Project)
-                {
-                    <a asp-controller="Student" asp-action="UploadProjectFiles" asp-route-projectID="@homework.Id" class="btn btn-primary">Incarca proiectul</a>
-                }
-                </li>
+                <tr>
+                    <td>@homework.Title</td>
+                    <td>@homework.Description</td>
+                    <td>@homework.CreationDate</td>
+                    <td>@homework.EndDate</td>
+
+                    @if(homework.Grade == 0.00)
+                    {
+                        <td>Fara nota</td>
+                    }
+                    else
+                    {
+                        <td>@homework.Grade</td>
+                    }
+
+                    @if(homework.Status == false)
+                    {
+                        <td>Necompletata</td>
+                    }
+                    else
+                    {
+                        <td>Completata</td>
+                    }
+
+                    @if(homework is StudentManagementSystem.Models.Project)
+                    {
+                        <td>
+                        <a asp-controller="Student" asp-action="UploadProjectFiles" asp-route-projectID="@homework.Id" class="btn btn-primary">Incarca proiectul</a>
+                        </td>
+                    }
+                    else if(homework is StudentManagementSystem.Models.Homework)
+                    {
+                        <td>
+                        <a class="btn btn-primary" asp-controller="Student" asp-action="EditHomework" asp-route-id="@homework.Id">Acceseaza Tema</a>
+                        </td>
+                    }
+                    else
+                    {
+                        <td>
+                            <a class="btn btn-primary" asp-controller="Student" asp-action="StartQuiz" asp-route-id="@homework.Id">Acceseaza Tema</a>
+                        </td>
+                    }
+                </tr>
             }
-        </ul>
-    </th>
+        </tbody>
+    </table>
 }
 
 @section Scripts {
