Fixed spaghetti code in registration =^)

--- a/StudentManagementSystem/Views/Account/Register.cshtml
+++ b/StudentManagementSystem/Views/Account/Register.cshtml
@@ -58,9 +58,9 @@
             <div class="form-group mb-4" id="professorFields" style="display:none;">
                 <label asp-for="Department"></label>
                 <select asp-for="Department" class="form-control">
-                    <option value="Mathematics">Matematica</option>
-                    <option value="Physics">Fizica</option>
-                    <option value="ComputerScience">Informatica</option>
+                    <option value="Matematica">Matematica</option>
+                    <option value="Fizica">Fizica</option>
+                    <option value="Programare">Informatica</option>
                 </select>
                 <span asp-validation-for="Department" class="text-danger"></span>
             </div>
