--- a/StudentManagementSystem/Views/Professor/Homeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/Homeworks.cshtml
@@ -18,6 +18,9 @@ else
     <a class="btn btn-primary" asp-controller="Professor" asp-action="CreateHomework">
         Creeaza o tema
     </a>
+    <a class="btn btn-primary" asp-controller="Professor" asp-action="CreateQuiz">
+        Creeaza un test
+    </a>
     <table class="table">
         <thead>
             <tr>
