--- a/StudentManagementSystem/Views/Professor/ViewStudents.cshtml
+++ b/StudentManagementSystem/Views/Professor/ViewStudents.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<StudentManagementSystem.Models.Student>
 
 @{
-    ViewData["Title"] = "Student Inscrisi";
+    ViewData["Title"] = "Studenti Inscrisi";
 }
 
 <h3>Toti studentii inscrisi</h3>
