Students can now complete quizzes and submit them to get a grade.

--- a/StudentManagementSystem/Views/Professor/CreateQuiz.cshtml
+++ b/StudentManagementSystem/Views/Professor/CreateQuiz.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StudentManagementSystem.ViewModels.CreateQuizViewModel
 
 @{
-    ViewData["Title"] = "Create Quiz";
+    ViewData["Title"] = "Creeaza test";
 }
 
 <h2>Create Quiz</h2>
@@ -88,8 +88,6 @@
 </form>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-
     <script>
         function AddQuestion() {
             var questionsDiv = document.getElementById("questions");
