Professors can now grade homeworks and leave a comment.

--- a/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
@@ -56,6 +56,11 @@ else
                         <a asp-controller="Professor" asp-action="DownloadProjectFiles" asp-route-projectId="@homework.Id" class="btn btn-primary btn-sm">Descarca fisierele</a>
                         </td>
                     }
+                    <td>
+                    <a asp-controller="Professor" asp-action="GradeHomework" asp-route-homeworkId="@homework.Id" class="btn btn-primary btn-sm">
+                        Adauaga o nota
+                    </a>
+                    </td>
                 </tr>
             }
         </tbody>
