--- a/StudentManagementSystem/Views/Student/Homework.cshtml
+++ b/StudentManagementSystem/Views/Student/Homework.cshtml
@@ -34,13 +34,13 @@ else
                     <td>@homework.CreationDate</td>
                     <td>@homework.EndDate</td>
 
-                    @if(homework.Grade == 0.00)
+                    @if(homework.HasGrade == true)
                     {
-                        <td>Fara nota</td>
+                        <td>@homework.Grade / 10</td>
                     }
                     else
                     {
-                        <td>@homework.Grade</td>
+                        <td>Fara nota</td>
                     }
 
                     @if(homework.Status == false)
@@ -80,4 +80,5 @@ else
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+    
 }
