Added grade calculation based on formula for each discipline.

--- a/StudentManagementSystem/Views/Professor/Index.cshtml
+++ b/StudentManagementSystem/Views/Professor/Index.cshtml
@@ -5,3 +5,7 @@
 }
 
 <h5>Bine ai venit, @Model.Name!</h5>
+
+<h3>Schimba formula de calcul a mediei</h3>
+<a class="btn btn-primary" asp-controller="Professor" asp-action="GradeCalculationFormula"
+   asp-route-disciplineId="@Model.DisciplineId">Schimba formula</a>
