--- a/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
@@ -43,11 +43,11 @@ else
 
                     @if (homework.Status == false)
                     {
-                        <td>Necompletata</td>
+                        <td>Neevaluata</td>
                     }
                     else
                     {
-                        <td>Completata</td>
+                        <td>Evaluata</td>
                     }
 
                     @if (homework is StudentManagementSystem.Models.Project)
