--- a/StudentManagementSystem/Views/Student/Homework.cshtml
+++ b/StudentManagementSystem/Views/Student/Homework.cshtml
@@ -43,13 +43,13 @@ else
                         <td>@homework.Grade</td>
                     }
 
-                    @if(homework.Status == false)
+                    @if(homework.Status == true)
                     {
-                        <td>Necompletata</td>
+                        <td>Evaluata</td>
                     }
                     else
                     {
-                        <td>Completata</td>
+                        <td>Neevaluata</td>
                     }
 
                     <!-- 
