--- a/StudentManagementSystem/Views/Professor/ViewStudents.cshtml
+++ b/StudentManagementSystem/Views/Professor/ViewStudents.cshtml
@@ -12,50 +12,37 @@
 }
 else
 {
-    <table>
-        <thead>
+    <table class="table table-striped table-bordered">
+        <thead class="thead-light">
             <tr>
-                <th>Nume</th>
-                <th>Email</th>
-                <th>Anul de studiu</th>
-                <th>Media generala</th>
+                <th class="p-3">Nume</th>
+                <th class="p-3">Email</th>
+                <th class="p-3">Anul de studiu</th>
+                <th class="p-3">Media generala</th>
+                @foreach(var student in Model[0].StudentDisciplines)
+                {
+                    <th class="p-3">Media la @student.Discipline.Name</th>
+                }
             </tr>
         </thead>
         <tbody>
             @foreach(var student in Model)
             {
                 <tr>
-                    <td>@student.Name</td>
-                    <td>@student.Email</td>
-                    <td>@student.YearOfStudy</td>
-                    <td>@student.GeneralGrade</td>
-                    <td>
-                    <a asp-action="ViewStudentHomeworks" asp-route-studentId="@student.Id" class="btn btn-primary">
-                        Vezi Temele 
-                    </a>
-                    </td>
-                </tr>
-            }
-
-            @foreach (var student in Model)
-            {
-                <tr>
-                    <td>@student.UserName</td>
-                    <td>
-                        <ul>
-                            @foreach (var studentDiscipline in student.StudentDisciplines)
-                            {
-                                @studentDiscipline.Discipline.Name
-                            }
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            @foreach (var studentDiscipline in student.StudentDisciplines)
-                            {
-                                @studentDiscipline.GradeAverage
-                            }
-                        </ul>
+                    <td class="p-3">@student.Name</td>
+                    <td class="p-3">@student.Email</td>
+                    <td class="p-3">@student.YearOfStudy</td>
+                    <td class="p-3">@student.GeneralGrade</td>
+                        @foreach (var studentDiscipline in student.StudentDisciplines)
+                        {
+                            <td class="p-3">
+                                    @studentDiscipline.GradeAverage
+                            </td>
+                        }
+                    <td class="p-3">
+                        <a asp-action="ViewStudentHomeworks" asp-route-studentId="@student.Id" class="btn btn-primary">
+                            Vezi Temele
+                        </a>
                     </td>
                 </tr>
             }
