--- a/StudentManagementSystem/Views/Shared/_StudentPartial.cshtml
+++ b/StudentManagementSystem/Views/Shared/_StudentPartial.cshtml
@@ -9,6 +9,9 @@
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Student" asp-action="Homework">Teme</a>
             </li>
+            <li>
+                <a class="nav-link" asp-controller="Student" asp-action="ViewGrades">Medii</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Iesire</a>
             </li>
