--- a/StudentManagementSystem/Views/Professor/Homeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/Homeworks.cshtml
@@ -21,8 +21,11 @@ else
     <a class="btn btn-primary" asp-controller="Professor" asp-action="CreateQuiz">
         Creeaza un test
     </a>
-    <table class="table">
-        <thead>
+    <a class="btn btn-primary" asp-controller="Professor" asp-action="ExportGradesToCSV">
+        Descarca notele studentilor in format CSV
+    </a>
+    <table class="table table-striped table-bordered">
+        <thead class="thead-light">
             <tr>
                 <th>Titlu</th>
                 <th>Descriere</th>
