Added viewable student homework content, changed spelling mistakes

--- a/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
@@ -58,7 +58,7 @@ else
                     }
                     <td>
                     <a asp-controller="Professor" asp-action="GradeHomework" asp-route-homeworkId="@homework.Id" class="btn btn-primary btn-sm">
-                        Adauaga o nota
+                        Adauga o nota
                     </a>
                     </td>
                 </tr>
