--- a/StudentManagementSystem/Views/Professor/Homeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/Homeworks.cshtml
@@ -29,7 +29,7 @@ else
             <tr>
                 <th>Titlu</th>
                 <th>Descriere</th>
-                <th>Data creeari</th>
+                <th>Data crearii</th>
                 <th>Termen limita</th>
             </tr>
         </thead>
