--- a/StudentManagementSystem/Views/Professor/CreateQuiz.cshtml
+++ b/StudentManagementSystem/Views/Professor/CreateQuiz.cshtml
@@ -52,6 +52,12 @@
         <span asp-validation-for="AfterEndUploadDate" class="text-danger"></span>
     </div>
 
+    <div class="form-group">
+        <label asp-for="TimeLimit"></label>
+        <input asp-for="TimeLimit" class="form-control" />
+        <span asp-validation-for="TimeLimit" class="text-danger"></span>
+    </div>
+
     <div id="questions">
         @for (int i = 0; i < Model.Questions.Count; i++)
         {
