--- a/StudentManagementSystem/Views/Student/CompleteQuiz.cshtml
+++ b/StudentManagementSystem/Views/Student/CompleteQuiz.cshtml
@@ -9,25 +9,66 @@
 <form asp-action="CompleteQuiz" method="post">
     <input type="hidden" asp-for="QuizID" />
     <input type="hidden" asp-for="Title" />
-    @for (int i = 0; i < Model.Questions.Count; i++)
-    {
-        <div class="form-group">
-            <label>@Model.Questions[i].Question</label>
-            <input type="hidden" asp-for="Questions[i].Question" />
-            @for (int j = 0; j < Model.Questions[i].Answers.Count; j++)
-            {
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" asp-for="Questions[i].SelectedAnswer" value="@Model.Questions[i].Answers[j]" />
-                    <label class="form-check-label">@Model.Questions[i].Answers[j]</label>
-                </div>
-            }
-        </div>
-    }
-    <p>Nota finala = (nr. raspunsuri corected) / (nr. intrebari) * 10</p>
-    <button type="submit" class="btn btn-primary">Trimite testul</button>
+    <div id="quiz-timer" class="alert alert-warning" style="display:none;"></div>
+
+    <div id="quiz-content" style="display:none;">
+        @for (int i = 0; i < Model.Questions.Count; i++)
+        {
+            <div class="form-group">
+                <label>@Model.Questions[i].Question</label>
+                <input type="hidden" asp-for="Questions[i].Question" />
+                @for (int j = 0; j < Model.Questions[i].Answers.Count; j++)
+                {
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" asp-for="Questions[i].SelectedAnswer" value="@Model.Questions[i].Answers[j]" />
+                        <label class="form-check-label">@Model.Questions[i].Answers[j]</label>
+                    </div>
+                }
+            </div>
+        }
+        <button type="submit" class="btn btn-primary">Trimite testul</button>
+    </div>
+
+    <div id="hide-after-start">
+        <p>Ai timp @Model.TimeLimit minute sa completezi testul</p>
+        <p>Nota finala = (nr. raspunsuri corected) / (nr. intrebari) * 9 + 1.00</p>
+    <button type="button" class="btn btn-primary" id="start-quiz-btn" onclick="StartQuiz()">Incepe testul</button>
+    </div>
 </form>
 
 @section Scripts
 {
     <partial name="_ValidationScriptsPartial" />
+
+    <script>
+        // Get the time limit in secodns
+        var timeLimit = @Model.TimeLimit * 60;
+        var timer = document.getElementById("quiz-timer");
+        var quizContentElement = document.getElementById("quiz-content");
+        var startQuizButton = document.getElementById("start-quiz-button");
+        var hideAfterStart = document.getElementById("hide-after-start");
+
+        function StartQuiz()
+        {
+            hideAfterStart.style.display = "none";
+            quizContentElement.style.display= "block";
+            timer.style.display = "block";
+            UpdateTimer();
+        }
+
+        function UpdateTimer()
+        {
+            var minutes = Math.floor(timeLimit / 60);
+            var seconds = timeLimit % 60;
+            timer.innerText = `Timp ramas: ${minutes}:${seconds}`;
+
+            if(timeLimit <= 0)
+                document.forms[0].submit();
+            else
+            {
+                timeLimit--;
+                setTimeout(UpdateTimer, 1000);
+            }
+        }
+    </script>
 }
