UI Logic improvements, updated commenting system

--- a/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/ViewStudentHomeworks.cshtml
@@ -56,11 +56,13 @@ else
                         <a asp-controller="Professor" asp-action="DownloadProjectFiles" asp-route-projectId="@homework.Id" class="btn btn-primary btn-sm">Descarca fisierele</a>
                         </td>
                     }
-                    <td>
-                    <a asp-controller="Professor" asp-action="GradeHomework" asp-route-homeworkId="@homework.Id" class="btn btn-primary btn-sm">
-                        Adauga o nota
-                    </a>
+                    @if (homework.Grade == 0){
+                        <td>
+                        <a asp-controller="Professor" asp-action="GradeHomework" asp-route-homeworkId="@homework.Id" class="btn btn-primary btn-sm">
+                            Adauga o nota
+                        </a>
                     </td>
+                    }
                 </tr>
             }
         </tbody>
