Added student leaderboards and fixed some bugs

--- a/StudentManagementSystem/Views/Professor/Homeworks.cshtml
+++ b/StudentManagementSystem/Views/Professor/Homeworks.cshtml
@@ -12,6 +12,12 @@
     <a class="btn btn-primary" asp-controller="Professor" asp-action="CreateHomework">
         Creeaza o tema
     </a>
+    <a class="btn btn-primary" asp-controller="Professor" asp-action="CreateQuiz">
+        Creeaza un test
+    </a>
+    <a class="btn btn-primary" asp-controller="Professor" asp-action="ExportGradesToCSV">
+        Descarca notele studentilor in format CSV
+    </a>
 }
 else
 {
