Started working on admin functionality (needs work)

--- a/StudentManagementSystem/Views/Account/Register.cshtml
+++ b/StudentManagementSystem/Views/Account/Register.cshtml
@@ -39,6 +39,7 @@
                 <label asp-for="Role" class="form-label">Rol</label>
                 <select asp-for="Role" class="form-control" id="roleSelector">
                     <option value="Student">Student</option>
+                    <option value="Admin">Admin</option>
                     <option value="Professor">Profesor</option>
                 </select>
                 <span asp-validation-for="Role" class="text-danger"></span>
