--- a/StudentManagementSystem/Views/Shared/_Layout.cshtml
+++ b/StudentManagementSystem/Views/Shared/_Layout.cshtml
@@ -11,17 +11,17 @@
 </head>
 <body>
     <header>
-        @if (User.IsInRole("Student"))
+        @if(User.IsInRole("Admin"))
+        {
+            <partial name="_AdminPartial" />
+        }
+        else if (User.IsInRole("Student"))
         {
             <partial name="_StudentPartial" />
         }
         else if(User.IsInRole("Professor"))
         {
             <partial name="_ProfessorPartial"/>
-        }
-        else if (User.IsInRole("Admin"))
-        {
-            <partial name="_AdminPartial" />
         }
         else
         {
