--- a/StudentManagementSystem/Views/Shared/_AdminPartial.cshtml
+++ b/StudentManagementSystem/Views/Shared/_AdminPartial.cshtml
@@ -7,6 +7,9 @@
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Admin" asp-action="Index">Acasa</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Admin" asp-action="ViewAllUsers">Vezi utilizatorii</a>
+            </li>
         </ul>
     </div>
 </nav>
