Admin can create professor users now.

--- a/StudentManagementSystem/Views/Admin/ViewAllUsers.cshtml
+++ b/StudentManagementSystem/Views/Admin/ViewAllUsers.cshtml
@@ -6,6 +6,12 @@
 
 <h2>Toti utilizatorii</h2>
 
+<a asp-action="CreateProfessor" 
+    asp-controller="Admin" 
+    class="btn btn-primary">
+    Creeaza profesor
+</a>
+
 <table class="table">
     <thead>
         <tr>
