Admin can create student users now.

--- a/StudentManagementSystem/Views/Admin/ViewAllUsers.cshtml
+++ b/StudentManagementSystem/Views/Admin/ViewAllUsers.cshtml
@@ -12,6 +12,12 @@
     Creeaza profesor
 </a>
 
+<a asp-action="CreateStudent"
+   asp-controller="Admin"
+   class="btn btn-primary">
+    Creeaza student
+</a>
+
 <table class="table">
     <thead>
         <tr>
