--- a/StudentManagementSystem/Views/Shared/_AdminPartial.cshtml
+++ b/StudentManagementSystem/Views/Shared/_AdminPartial.cshtml
@@ -10,6 +10,9 @@
             <li class="nav-item">
                 <a class="nav-link" asp-controller="Admin" asp-action="ViewAllUsers">Vezi utilizatorii</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Iesire</a>
+            </li>
         </ul>
     </div>
 </nav>
